--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -23,10 +23,10 @@
     </form>
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="#">USERNAME</a>
+        <a class="nav-link" href="#">{{loggedInUser?.accountName}}</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Login</a>
+        <button *ngIf="!loggedInUser" type="button" class="btn btn-default" (click)="onSignInButtonClick()">Sign in</button>
       </li>
     </ul>
   </div>
