--- a/src/app/landing-page/landing-page.component.css
+++ b/src/app/landing-page/landing-page.component.css
@@ -5,3 +5,24 @@
   .thumbnail {
     height: 100%;
   }
+.memeImg {
+  width: 100%;
+  height: 100%;
+  /* TODO viewport image to fill not contain */
+  object-fit: contain;
+}
+.memeodayWrapper {
+  height: 20em;
+}
+
+.memeodayImg {
+  height: 100%;
+  object-fit: contain;
+  float:right;
+}
+.memeCol {
+  height: 10em;
+}
+.memeRowHeader > h2 {
+  margin-top: 1.2em;
+}
