--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -4,25 +4,23 @@
     <div class="col-md-2"></div>
     <div class="col-md-4">
       <div class="memeodayWrapper">
-      <img src="{{memeOfTheDay.image}}" class=" memeodayImg" alt="{{memeOfTheDay.name}}">
-    </div>
+        <img src="{{memeOfTheDay.image}}" class=" memeodayImg" alt="{{memeOfTheDay.name}}">
+      </div>
     </div>
     <div class="col-md-4">
-      <!-- <ul> -->
-        <h4>{{memeOfTheDay.name | uppercase }}</h4>
-        <b>{{memeOfTheDay.born}} - {{memeOfTheDay.died}}</b>
-        <p>{{memeOfTheDay.description}}</p>
-      <!-- </ul> -->
+      <h4>{{memeOfTheDay.name | uppercase }}</h4>
+      <b>{{memeOfTheDay.born}} - {{memeOfTheDay.died}}</b>
+      <p>{{memeOfTheDay.description}}</p>
     </div>
     <div class="col-md-2"></div>
   </div>
-<div class="memeRowHeader">
-  <h2 class="text-center">Currently thriving memes</h2>
-</div>
+  <div class="memeRowHeader">
+    <h2 class="text-center">Currently thriving memes</h2>
+  </div>
   <div class="row">
     <div class="col-md-3 memeCol" *ngFor="let meme of thrivingMemes">
       <div class="thumbnail text-center">
-        <a href="" target="_blank">
+        <a routerLink="/detail/{{meme.id}}">
           <img src="{{meme.image}}" class="img-thumbnail memeImg" alt="{{meme.name}}">
           <div class="caption">
             <p>{{meme.name}}</p>
@@ -32,12 +30,12 @@
     </div>
   </div>
   <div class="memeRowHeader">
-  <h2 class="text-center">Dead memes</h2>
-</div>
+    <h2 class="text-center">Dead memes</h2>
+  </div>
   <div class="row">
     <div class="col-md-3 memeCol" *ngFor="let meme of deadMemes">
       <div class="thumbnail text-center">
-        <a href="" target="_blank">
+        <a routerLink="/detail/{{meme.id}}">
           <img src="{{meme.image}}" class="img-thumbnail memeImg" alt="{{meme.name}}">
           <div class="caption">
             <p>{{meme.name}}</p>
