--- a/src/app/meme-detail/meme-detail.component.html
+++ b/src/app/meme-detail/meme-detail.component.html
@@ -17,7 +17,7 @@
       <div class="col-md-5 text-center">
         <h4>{{meme.name | uppercase }}</h4>
         <b>{{meme.born}} - {{meme.died}}</b>
-        <p><a href="">{{meme.tags}}</a></p>
+        <p><a *ngFor="let tag of meme.tags" href="">{{tag}} </a></p>
       </div>
       <div class="col-md-3"></div>
 
