Login fixes, alert when wrong

--- a/src/app/shared/modals/login-modal/login-modal.component.html
+++ b/src/app/shared/modals/login-modal/login-modal.component.html
@@ -24,6 +24,8 @@
     <button class="btn btn-success" [disabled]="!loginForm.valid">
       Login
     </button>
-
+  </div>
+  <div *ngIf="showAlert" class="alert alert-danger" role="alert">
+    <strong>Oh snap!</strong> Change a few things up and try submitting again.
   </div>
 </form>
