new/top/hot selecitons

--- a/src/app/memes/memes.component.html
+++ b/src/app/memes/memes.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col">
+    <div class="col-md-2">
       <select class="selectpicker pastPicker">
           <option class="dropdown-item">Past 24 hours</option>
           <option class="dropdown-item">Past week</option>
@@ -9,6 +9,13 @@
           <option class="dropdown-item">Past 6 months </option>
           <option class="dropdown-item">Past year</option>
           <option class="dropdown-item">All time</option>
+        </select>
+      </div>
+    <div class="col-md-2">
+      <select class="selectpicker pastPicker">
+          <option class="dropdown-item"> Hot </option>
+          <option class="dropdown-item"> New </option>
+          <option class="dropdown-item"> Top </option>
         </select>
       </div>
   </div>
