--- a/src/app/shared/modals/login-modal-wrapper/login-modal/login-modal.component.html
+++ b/src/app/shared/modals/login-modal-wrapper/login-modal/login-modal.component.html
@@ -3,25 +3,22 @@
   <button type="button" class="close" aria-label="Close" (click)="activeModal.dismiss('Cross click')">
   </button>
 </div>
-<form #loginForm="ngForm" (ngSubmit)="submitForm()">
+<form #formGroup="ngForm" (ngSubmit)="submitForm()">
   <div class="modal-boy">
     <div class="container">
       <div class="form-group">
         <label for="email">Email</label>
-        <input type="text" class="form-control" id="email" required validEmail [(ngModel)]="username" name="email">
+        <input type="text" class="form-control" id="email" required validEmail [(ngModel)]="formUsername" name="email">
 
       </div>
       <div class="form-group">
         <label for="password">Password</label>
-        <input type="password" class="form-control" [(ngModel)]="password" name="password" required>
+        <input type="password" class="form-control" [(ngModel)]="formPassword" name="password" required>
       </div>
     </div>
   </div>
   <div class="modal-footer">
-    <button class="btn btn-success btn-register mr-auto" >
-      Register
-    </button>
-    <button class="btn btn-success" [disabled]="!loginForm.valid">
+    <button class="btn btn-success" [disabled]="!formGroup.valid">
       Login
     </button>
   </div>
