--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -28,6 +28,9 @@
       <li class="nav-item">
         <button *ngIf="!loggedInUser" type="button" class="btn btn-default" (click)="onSignInButtonClick()">Sign in</button>
       </li>
+      <li class="nav-item">
+          <button *ngIf="loggedInUser" type="button" class="btn btn-default" (click)="onLogoutButtonClick()">Log out</button>
+        </li>
     </ul>
   </div>
 </nav>
