--- a/src/app/shared/modals/login-modal-wrapper/login-modal/login-modal.component.html
+++ b/src/app/shared/modals/login-modal-wrapper/login-modal/login-modal.component.html
@@ -1,15 +1,15 @@
 <div class="modal-header">
   <h4 class="modal-title">Sign in</h4>
-  <button type="button" class="close" aria-label="Close" (click)="activeModal.dismiss('Cross click')">
-  </button>
 </div>
 <form #formGroup="ngForm" (ngSubmit)="submitForm()">
-  <div class="modal-boy">
+  <div class="modal-body">
     <div class="container">
       <div class="form-group">
         <label for="email">Email</label>
-        <input type="text" class="form-control" id="email" required validEmail [(ngModel)]="formUsername" name="email">
-
+        <input type="text" class="form-control" id="email" required validEmail [(ngModel)]="formUsername" name="email" #email="ngModel" [ngClass]="{ 'is-invalid': email.dirty && email.invalid }">
+        <div *ngIf="email.dirty && email.invalid" class="invalid-feedback">
+          <div *ngIf="email.errors.validEmail">Email must be a valid email address</div>
+        </div>
       </div>
       <div class="form-group">
         <label for="password">Password</label>
