--- a/src/app/shared/modals/login-modal-wrapper/register-modal/register-modal.component.html
+++ b/src/app/shared/modals/login-modal-wrapper/register-modal/register-modal.component.html
@@ -1,29 +1,49 @@
-<form name="form" (ngSubmit)="formGroup.form.valid && onSubmit()" #formGroup="ngForm" novalidate>
-  
-  <div class="form-group">
-      <label for="lastName">Last Name</label>
-      <input type="text" class="form-control" name="lastName" [(ngModel)]="formUsername" #lastName="ngModel" [ngClass]="{ 'is-invalid': formGroup.submitted && lastName.invalid }" required />
-      <div *ngIf="formGroup.submitted && lastName.invalid" class="invalid-feedback">
-          <div *ngIf="lastName.errors.required">Last Name is required</div>
-      </div>
-  </div>
-  <div class="form-group">
-      <label for="email">Email</label>
-      <input type="text" class="form-control" name="email" [(ngModel)]="formEmail" #email="ngModel" [ngClass]="{ 'is-invalid': formGroup.submitted && email.invalid }" required email />
-      <div *ngIf="formGroup.submitted && email.invalid" class="invalid-feedback">
-          <div *ngIf="email.errors.required">Email is required</div>
-          <div *ngIf="email.errors.email">Email must be a valid email address</div>
-      </div>
-  </div>
-  <div class="form-group">
-      <label for="password">Password</label>
-      <input type="password" class="form-control" name="password" [(ngModel)]="formPassword" #password="ngModel" [ngClass]="{ 'is-invalid': formGroup.submitted && password.invalid }" required minlength="6" />
-      <div *ngIf="formGroup.submitted && password.invalid" class="invalid-feedback">
-          <div *ngIf="password.errors.required">Password is required</div>
-          <div *ngIf="password.errors.minlength">Password must be at least 6 characters</div>
-      </div>
-  </div>
-  <div class="form-group">
-      <button class="btn btn-primary">Register</button>
-  </div>
+<div class="modal-header">
+    <h4 class="modal-title">Register</h4>
+</div>
+<form name="form" (ngSubmit)="formGroup.form.valid && submitForm()" #formGroup="ngForm" novalidate>
+    <div class="modal-body">
+        <div class="container">
+            <div class="form-group">
+                <label for="username">Username</label>
+                <input type="text" class="form-control" name="username" [(ngModel)]="formUsername" #username="ngModel" [ngClass]="{ 'is-invalid': username.touched && username.invalid }"
+                    required />
+                <div *ngIf="username.touched && username.invalid" class="invalid-feedback">
+                    <div *ngIf="username.errors.required">Last Name is required</div>
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="email">Email</label>
+                <input type="text" class="form-control" name="email" [(ngModel)]="formEmail" #email="ngModel" [ngClass]="{ 'is-invalid': email.dirty && email.invalid }"
+                    required email />
+                <div *ngIf="email.dirty && email.invalid" class="invalid-feedback">
+                    <div *ngIf="email.errors.required">Email is required</div>
+                    <div *ngIf="email.errors.email">Email must be a valid email address</div>
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="password">Password</label>
+                <input type="password" class="form-control" name="password" [(ngModel)]="formPassword" #password="ngModel" [ngClass]="{ 'is-invalid': password.dirty && password.invalid }"
+                    required minlength="6" />
+                <div *ngIf="password.dirty && password.invalid" class="invalid-feedback">
+                    <div *ngIf="password.errors.required">Password is required</div>
+                    <div *ngIf="password.errors.minlength">Password must be at least 6 characters</div>
+                </div>
+            </div>
+            <div class="form-group">
+                <button class="btn btn-success" [disabled]="!formGroup.valid">Register</button>
+
+            </div>
+
+        </div>
+    </div>
+    <div *ngIf="registerComplete" class="alert alert-success" role="alert">
+        Sucess, registration complete!
+    </div>
+    <div *ngIf="duplicateEmail" class="alert alert-danger" role="alert">
+        That email already exists.
+    </div>
+    <div *ngIf="duplicateName" class="alert alert-danger" role="alert">
+        That username already exists.
+    </div>
 </form>
