--- a/src/app/memes/memes.component.html
+++ b/src/app/memes/memes.component.html
@@ -1,19 +1,43 @@
 <ng-sidebar-container style="height: 100vh;">
-  <!-- A sidebar -->
-  <ng-sidebar mode="push" [(opened)]="sidebar_opened" [sidebarClass]>
-    <div class="sidebarContent">
-      <a closeSidebar>X</a>
-      <ul>
-        <li>Menu Item</li>
-        <li>Menu Item</li>
-        <li>Menu Item</li>
-      </ul>
+  <!-- Sidebar -->
+  <ng-sidebar mode="push" [(opened)]="sidebar_opened">
+    <div class="sidebarContent" class="closeSidebar">
+      <h4 closeSidebar>
+        <span>&#10799;</span> Filters </h4>
+      <hr>
+      <!-- Search form -->
+      <div class="">
+        <input class="form-control sidebarSearch" type="text" placeholder="Search" aria-label="Search">
+      </div>
+
+      <ngb-accordion #acc="ngbAccordion">
+          <ngb-panel title="Tags">
+            <ng-template ngbPanelContent>
+              <ul>
+                  <li><input class="form-control sidebarSearch" type="text" placeholder="Search" aria-label="Search"></li>
+                    <li>Menu Item</li>
+                    <li>Menu Item</li>
+                    <li>Menu Item</li>
+                  </ul>
+            </ng-template>
+          </ngb-panel>
+          <ngb-panel title="Hubs">
+            <ng-template ngbPanelContent>
+                <ul>
+                    <li><input class="form-control sidebarSearch" type="text" placeholder="Search" aria-label="Search"></li>
+                    <li>Menu Item</li>
+                    <li>Menu Item</li>
+                    <li>Menu Item</li>
+                  </ul>
+            </ng-template>
+          </ngb-panel>
+        </ngb-accordion>
     </div>
   </ng-sidebar>
   <!-- Page content -->
   <div ng-sidebar-content>
     <div class="col-md-2">
-      <button (click)="_toggleSidebar()">Toggle sidebar</button>
+      <button (click)="_toggleSidebar()" class="{{sidebar_opened ? 'arrow right toggleSidebar' : 'arrow left toggleSidebar'}}"></button>
     </div>
     <div class="container">
       <div class="row">
@@ -39,13 +63,13 @@
       <div class="row" *ngFor="let meme of memes">
         <div class="col-sm-1 voteCol">
           <div class="midcol unvoted">
-            <button type="button" class="">
-              Up
-            </button>
+            <!-- <button type="button" class=""> -->
+                <i class="arrow up"></i>
+            <!-- </button> -->
             <div class="score">SCORE</div>
-            <button type="button" class="">
-              <span class="glyphicon glyphicon-chevron-down"></span> Down
-            </button>
+            <!-- <button type="button" class=""> -->
+                <i class="arrow down"></i>
+            <!-- </button> -->
           </div>
         </div>
         <div class="col-md-2 memeCol">
