--- a/src/app/memes/memes.component.html
+++ b/src/app/memes/memes.component.html
@@ -58,7 +58,7 @@
           </select>
         </div>
       </div>
-      <div class="row" *ngFor="let meme of memes">
+      <div class="row memeRow" *ngFor="let meme of memes">
         <div class="col-sm-1 voteCol">
           <div class="midcol unvoted">
             <!-- <button type="button" class=""> -->
