--- a/src/app/shared/modals/login-modal-wrapper/register-modal/register-modal.component.html
+++ b/src/app/shared/modals/login-modal-wrapper/register-modal/register-modal.component.html
@@ -15,10 +15,10 @@
             <div class="form-group">
                 <label for="email">Email</label>
                 <input type="text" class="form-control" name="email" [(ngModel)]="formEmail" #email="ngModel" [ngClass]="{ 'is-invalid': email.dirty && email.invalid }"
-                    required email />
+                    required validEmail />
                 <div *ngIf="email.dirty && email.invalid" class="invalid-feedback">
                     <div *ngIf="email.errors.required">Email is required</div>
-                    <div *ngIf="email.errors.email">Email must be a valid email address</div>
+                    <div *ngIf="email.errors.validEmail">Email must be a valid email address</div>
                 </div>
             </div>
             <div class="form-group">
@@ -28,6 +28,15 @@
                 <div *ngIf="password.dirty && password.invalid" class="invalid-feedback">
                     <div *ngIf="password.errors.required">Password is required</div>
                     <div *ngIf="password.errors.minlength">Password must be at least 6 characters</div>
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="passwordCheck">Password check</label>
+                <input type="password" class="form-control" name="passwordCheck" validateEqual="password" [(ngModel)]="formPasswordCheck" #passwordCheck="ngModel" [ngClass]="{ 'is-invalid': passwordCheck.dirty && passwordCheck.invalid }"
+                    required />
+                <div *ngIf="passwordCheck.dirty && passwordCheck.invalid" class="invalid-feedback">
+                    <div *ngIf="passwordCheck.errors.required">Password is required</div>
+                    <div *ngIf="passwordCheck.errors.validateEqual">Passwords must match</div>
                 </div>
             </div>
             <div class="form-group">
