hub, date created data for memes

--- a/src/app/memes/memes.component.html
+++ b/src/app/memes/memes.component.html
@@ -86,10 +86,10 @@
             <li>
               <p>Submitted by
                 <span>
-                  <a href="" class="detailLink"> USER </a>
+                  <a href="" class="detailLink"> {{meme.creator.accountName}} </a>
                 </span>
-                <span>at DATEADDED to </span>
-                <a href="" class="detailLink"> HUB</a>
+                <span>at {{meme.date_created}} to </span>
+                <a href="" class="detailLink"> {{meme.hub.name}}</a>
               </p>
             </li>
             <li>
