--- a/src/app/memes/memes.component.html
+++ b/src/app/memes/memes.component.html
@@ -7,7 +7,8 @@
       <hr>
       <!-- Search form -->
       <div class="">
-        <input class="form-control sidebarSearch" type="text" placeholder="Search" aria-label="Search">
+        <app-meme-search [(memes$)]="memes"></app-meme-search>
+        <!-- <input class="form-control sidebarSearch" type="text" placeholder="Search" aria-label="Search"> -->
       </div>
 
       <ngb-accordion #acc="ngbAccordion">
