--- a/src/app/memes/memes.component.html
+++ b/src/app/memes/memes.component.html
@@ -7,7 +7,8 @@
       <hr>
       <!-- Search form -->
       <div class="">
-        <app-meme-search></app-meme-search>
+        <!-- <app-meme-search></app-meme-search> -->
+        <input #searchBox id="search-box" (keyup)="search(searchBox.value)" />
         <input class="form-control sidebarSearch" type="text" placeholder="Search" aria-label="Search">
       </div>
 
