--- a/src/app/memes/memes.component.html
+++ b/src/app/memes/memes.component.html
@@ -1,4 +1,4 @@
-<ng-sidebar-container style="height: 100vh;">
+<ng-sidebar-container style="height: 100%;">
   <!-- Sidebar -->
   <ng-sidebar mode="push" [(opened)]="sidebar_opened">
     <div>
@@ -100,7 +100,7 @@
                 <span>
                   <a href="" class="detailLink"> {{meme.creator.accountName}} </a>
                 </span>
-                <span>at {{meme.date_submitted}} to </span>
+                <span>{{howLongAgo(meme.date_submitted)}} ago to </span>
                 <a href="" class="detailLink"> {{meme.hub.name}}</a>
               </p>
             </li>
